--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # farsdata
 
 <!-- badges: start -->
+[![Travis build status](https://travis-ci.org/kjhealy/farsdata.svg?branch=master)](https://travis-ci.org/kjhealy/farsdata)
 <!-- badges: end -->
 
 The `farsdata` package contains data from the Fatality Analysis Reporting System (FARS) for fatal automobile crashes in the United States.
